# eslopemap.github.io

./: .gitignore  AGENTS.md  CNAME  CONTRIBUTING.md  FEATURES.md  README.md  TEST.md  UI.md  deps.json  fix-tauri-p-wd.patch  index.html  justfile  manifest.json  maplibre-gl-js  package-lock.json  package.json  playwright.config.js  skills-lock.json  slope.html  slope.md  track-bug-a2-filter-snippet.js  track-bug-global-state-filter-repro.html  vitest.config.mjs
app/: index.html  manifest.json
css/: main.css
debug/: debug-bisect-1-tilejson.html  debug-bisect-10-full-replica.html  debug-bisect-11-app-features.html  debug-bisect-12.html  debug-bisect-13.html  debug-bisect-14.html  debug-bisect-2-tiles512.html  debug-bisect-3-addlayer.html  debug-bisect-4-hillshade.html  debug-bisect-5-stepramp.html  debug-bisect-6-fullcombo.html  debug-bisect-7.html  debug-bisect-8.html  debug-bisect-9-hide-hillshade.html  debug-color-relief-repro.html  debug-test.js
docs/: index.html
js/: constants.js  dem.js  gpx-model.js  gpx-tree.js  io.js  main.js  persist.js  profile.js  selection-tools.js  shortcuts.js  state.js  track-edit.js  tracks.js  ui.js  utils.js  web-import.js
plans/: 20260327-IMPL-PLAN-FEAT1-TREE-ACTIONS.md  20260327-IMPL-PLAN-FEAT2-OPS-SELECTION.md  20260331-PLAN-GPX-WEB-IMPORT.md  20260331-PLAN-LAYERS.md  20260331_TAURI_SPIKE1_PLAN_PROTOCOL.md  20260331_TAURI_SPIKE2_PLAN_GPX_SYNC.md  20260401-PLAN-TOP-ROW.md  20260401-USER-DOCS.md  20260406-PLAN-UNIFIED-BASEMAP-UI.md  20260407-PLAN-1000-GPX-SCALABILITY.md  20260408-PLAN-CURSORINFO-ETC.md  20260409-PLAN-CUSTOM-LOCAL-LAYERS-PERSISTENCE.md  20260409-PLAN-FUNCTIONAL-COVERAGE-REDO.md  20260409-PLAN-REDO-TRACK-EDITING.md  20260409-PLAN-UNIFY-BASEMAP-OVERLAY-OPS.md  20260409-UNIFY-PERSIST-BOOKMARK-PLAN.md  20260410-PLAN-BLEND-MODES-AND-LAYER-ORDER.md  20270408-IMPL-PLAN-PANELS-VISI-PERSIST.md
prompts/: 20260321-EVO.md  20260322-FILESPLIT.md  20260322-LIT.md  (+27 more)
spike_demo/gpx_sync_filecentric/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
spike_demo/gpx_sync_filecentric/src-tauri/capabilities/: default.json
spike_demo/gpx_sync_filecentric/src-tauri/src/: main.rs
spike_demo/mbtiles_to_localhost/src-tauri/: Cargo.toml  tauri.conf.json
spike_demo/mbtiles_to_localhost/src-tauri/capabilities/: default.json
spike_demo/mbtiles_to_localhost/src-tauri/src/: main.rs
src-tauri/: Cargo.toml  cooldown.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  gpx_sync.rs  main.rs  tile_cache.rs  tile_server.rs
(+163 files in other folders)
