[package]
name = "slope-desktop"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core + plugins
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-localhost = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# GPX sync
notify = "7"
notify-debouncer-mini = "0.5"
sha2 = "0.10"

# Tile server + cache
tiny_http = "0.12"
http = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
ureq = "3"
filetime = "0.2"

# Config + OS paths
dirs = "6"
toml = "0.8"
base64 = "0.22"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
webdriver = ["dep:tauri-plugin-webdriver"]

[dependencies.tauri-plugin-webdriver]
version = "0.2"
optional = true
