[package]
name = "gpx_sync_filecentric"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
gpx_sync_backend = { path = "../../gpx_sync_backend" }
notify = "7"
notify-debouncer-mini = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-localhost = "2"
tauri-plugin-webdriver-automation = "0.1"
